Changed response to single trip and started routing split for apiv2

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -3,7 +3,7 @@ MEILI Travel Diary - web interface that allows to annotate GPS trajectories
 fused with accelerometer readings into travel diaries
 
 Copyright (C) 2014-2016 Adrian C. Prelipcean - http://adrianprelipcean.github.io/
-Copyright (C) 2016 Badger AB - https://github.com/Badger-MEILI
+Copyright (C) 2016 adIT AI - https://github.com/adIT-AI
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
@@ -29,6 +29,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" language="javascript" src="/javascripts/angular.min.js"></script>
     <script type="text/javascript" language="javascript" src="/javascripts/angular-resource.min.js"></script>
     <script type="text/javascript" language="javascript" src="/javascripts/angular-route.min.js"></script>
+    <script type="text/javascript" src="/javascripts/UserElements/generateBadge.js"></script>
+    <script type="text/javascript" src="/javascripts/TriplegElements/TriplegPagination.js"></script>
+    <script type="text/javascript" src="/javascripts/TripElements/TripPagination.js"></script>
+
     <script type="text/javascript" src="/javascripts/translationOp.js"></script>
     <script type="text/javascript" src="/javascripts/intro.js"></script>
     <script type="text/javascript" src="/javascripts/d3.min.js"></script>
@@ -37,8 +41,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <!--<script type="text/javascript" language="javascript" src="/javascripts/leaflet.js"></script>
     <script type="text/javascript" language="javascript" src="/javascripts/angular-leaflet-directive.min.js"></script>-->
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+
 
     <script type="text/javascript" src="/javascripts/TriplegOperations.js"></script>
     <script type="text/javascript" src="/javascripts/databaseAbstractionCalls.js"></script>
