--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -40,8 +40,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/lib/vis.js"></script>
     <link   type="text/css"        href="/stylesheets/lib/vis.css" rel="stylesheet"  />
 
-    <script type="text/javascript" src="/javascripts/lib/bootstrap.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/bootstrap.css" rel="stylesheet" />
+    <script type="text/javascript" src="/javascripts/lib/bootstrap_3.3.1/js/bootstrap.js"></script>
+    <link   type="text/css"       href="/javascripts/lib/bootstrap_3.3.1/css/bootstrap.css" rel="stylesheet" />
     <script type="text/javascript" src="/javascripts/lib/timepicker.js"></script>
     <link   type="text/css"       href="/javascripts/lib/bootstrap-timepicker.css" rel="stylesheet"  />
 
