correcting statistics js path

--- a/MEILI_Travel_Diary/public/views/Statistics.html
+++ b/MEILI_Travel_Diary/public/views/Statistics.html
@@ -47,7 +47,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <div id="drawBody">
     <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="svg" style="display: block"></svg>-->
     <div id="chart"></div>
-    <script src="../javascripts/graphVis.js"></script>
+    <script src="/javascripts/src/graphVis.js"></script>
 
     <select class="form-control form-control-inline" style="width:200px; display: inline-block" id="selectStatType" onchange="changeLoad()">;
         <option value="1" selected lang="en">Time spent per mode</option>
