Started code separation and removed a huge number of depraced code

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -49,6 +49,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
 
     <!-- Custom scripts -->
+    <script type="text/javascript" src="/javascripts/src/config.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Debug.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Trips.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Triplegs.js"></script>
+
     <script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
     <script type="text/javascript" src="/javascripts/src/TriplegElements/TriplegPagination.js"></script>
     <script type="text/javascript" src="/javascripts/src/TripElements/TripPagination.js"></script>
