Moving map configuration into config file and started to split code into separate file

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -54,6 +54,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Trips.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Triplegs.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Map.js"></script>
 
     <script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
     <script type="text/javascript" src="/javascripts/src/TriplegElements/TriplegPagination.js"></script>
