--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -55,6 +55,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/Map.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
 
     <script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
     <script type="text/javascript" src="/javascripts/src/TriplegElements/TriplegPagination.js"></script>
