Adding emitterjs to simplify handling loose couplings on data update

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -48,6 +48,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/lib/leaflet_1.0.0/leaflet.js"></script>
     <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
 
+    <script type="text/javascript" src="/javascripts/lib/emitter_1.2.1/index.js"></script>
+
     <!-- Custom scripts -->
     <script type="text/javascript" src="/javascripts/src/config.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
