js now starts in app.js and skips leafletembed.js

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -49,6 +49,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
 
     <script type="text/javascript" src="/javascripts/lib/emitter_1.2.1/index.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/moment_2.15.1.js"></script>
 
     <!-- Custom scripts -->
     <script type="text/javascript" src="/javascripts/src/config.js"></script>
@@ -60,14 +61,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/model/Tripleg.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
 
-    <script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
+    <script type="text/javascript" src="/javascripts/src/translationOp.js"></script>
+    <!--<script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
     <script type="text/javascript" src="/javascripts/src/TriplegElements/TriplegPagination.js"></script>
     <script type="text/javascript" src="/javascripts/src/TripElements/TripPagination.js"></script>
-    <script type="text/javascript" src="/javascripts/src/translationOp.js"></script>
+    
     <script type="text/javascript" src="/javascripts/src/graphVis.js"></script>
     <script type="text/javascript" src="/javascripts/src/TriplegOperations.js"></script>
     <script type="text/javascript" src="/javascripts/src/databaseAbstractionCalls.js"></script>
-    <script type="text/javascript" src="/javascripts/src/leafletembed.js"></script>
+    <script type="text/javascript" src="/javascripts/src/leafletembed.js"></script>-->
 
     <script type="text/javascript" src="/javascripts/src/app.js"></script>
 
