Moving api connection from app into trip and tiplegs. Adding user model to do so.

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -58,6 +58,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/Tripleg.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
 
