Adding css solution for timeline scrolling and static map

--- a/MEILI_Travel_Diary/public/stylesheets/style.css
+++ b/MEILI_Travel_Diary/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 html, body, #map{
@@ -9,4 +8,8 @@ html, body, #map{
 
 a {
     color: #00B7FF;
+}
+
+.row {
+  margin-top: 40px;
 }
