--- a/MEILI_Travel_Diary/public/stylesheets/custom_elem.css
+++ b/MEILI_Travel_Diary/public/stylesheets/custom_elem.css
@@ -19,7 +19,9 @@
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-body { padding-top: 50px; }
+.navbar-static-top {
+    margin-bottom: 0px;
+}
 
 .navbar-inverse{
     background: #2f4767;
@@ -156,10 +158,14 @@ PLUS SYMBOL
 }
 
 /** timeline box structure **/
+#timeline {
+    overflow: auto;
+    position: relative;
+}
+
 .timeline {
     list-style: none;
     padding: 20px 0 20px;
-    position: relative;
 }
 
 .timeline .text-muted{
