--- a/MEILI_Travel_Diary/public/views/map.html
+++ b/MEILI_Travel_Diary/public/views/map.html
@@ -63,9 +63,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div id="map" style="width: 100%; height: 100%">
         </div>
     </div>
-    <div class="col-md-6" id="leftone">
-
-        <ul class="timeline" id="timeline">
+    <div class="col-md-6" id="left-panel">
+        <div id="timeline">
+            <ul class="timeline"></ul>
+        </div>
 
     <!--the end is inserted programmatically -->
 
