--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -92,7 +92,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 </head>
 
-<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" id="navbarId">
+<nav class="navbar navbar-default navbar-static-top navbar-inverse" id="navbar-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
