--- a/MEILI_Travel_Diary/public/javascripts/lib/bootstrap-timepicker_0.5.2/css/bootstrap-timepicker.css
+++ b/MEILI_Travel_Diary/public/javascripts/lib/bootstrap-timepicker_0.5.2/css/bootstrap-timepicker.css
@@ -10,29 +10,7 @@
  */
 .bootstrap-timepicker {
   position: relative;
-  width: 300px !important;
 }
-
-.bootstrap-timepicker .input-small {
-  height: 30px;
-  border: none;
-  width: 40px;
-}
-
-.bootstrap-timepicker .input-group-addon{
-  display: inline-table;
-  background: none;
-  border: none;
-  font-weight: bold;
-  color: black;
-}
-
-.form-control-2{
-    margin: 0;
-    color: #c25b4e;
-    font-size: 18px;
-}
-
 .bootstrap-timepicker.pull-right .bootstrap-timepicker-widget.dropdown-menu {
   left: auto;
   right: 0;
@@ -45,15 +23,16 @@
   left: auto;
   right: 13px;
 }
-.bootstrap-timepicker .add-on {
+.bootstrap-timepicker .input-group-addon {
   cursor: pointer;
 }
-.bootstrap-timepicker .add-on i {
+.bootstrap-timepicker .input-group-addon i {
+  display: inline-block;
   width: 16px;
   height: 16px;
 }
 .bootstrap-timepicker-widget.dropdown-menu {
-  padding: 2px 3px 2px 2px;
+  padding: 4px;
 }
 .bootstrap-timepicker-widget.dropdown-menu.open {
   display: inline-block;
@@ -64,9 +43,7 @@
   border-right: 7px solid transparent;
   content: "";
   display: inline-block;
-  left: 9px;
   position: absolute;
-  top: -7px;
 }
 .bootstrap-timepicker-widget.dropdown-menu:after {
   border-bottom: 6px solid #FFFFFF;
@@ -74,9 +51,35 @@
   border-right: 6px solid transparent;
   content: "";
   display: inline-block;
-  left: 10px;
   position: absolute;
+}
+.bootstrap-timepicker-widget.timepicker-orient-left:before {
+  left: 6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-left:after {
+  left: 7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-right:before {
+  right: 6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-right:after {
+  right: 7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-top:before {
+  top: -7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-top:after {
   top: -6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-bottom:before {
+  bottom: -7px;
+  border-bottom: 0;
+  border-top: 7px solid #999;
+}
+.bootstrap-timepicker-widget.timepicker-orient-bottom:after {
+  bottom: -6px;
+  border-bottom: 0;
+  border-top: 6px solid #ffffff;
 }
 .bootstrap-timepicker-widget a.btn,
 .bootstrap-timepicker-widget input {
@@ -115,9 +118,9 @@
   border-radius: 4px;
   border-color: #ddd;
 }
-
 .bootstrap-timepicker-widget table td a i {
   margin-top: 2px;
+  font-size: 18px;
 }
 .bootstrap-timepicker-widget table td input {
   width: 25px;
