--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -42,8 +42,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <script type="text/javascript" src="/javascripts/lib/bootstrap_3.3.1/js/bootstrap.js"></script>
     <link   type="text/css"       href="/javascripts/lib/bootstrap_3.3.1/css/bootstrap.css" rel="stylesheet" />
-    <script type="text/javascript" src="/javascripts/lib/timepicker.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/bootstrap-timepicker.css" rel="stylesheet"  />
+    <script type="text/javascript" src="/javascripts/lib/bootstrap-timepicker_0.5.2/js/bootstrap-timepicker.js"></script>
+    <link   type="text/css"       href="/javascripts/lib/bootstrap-timepicker_0.5.2/css/bootstrap-timepicker.css" rel="stylesheet"  />
 
     <script type="text/javascript" src="/javascripts/lib/leaflet_1.0.0/leaflet.js"></script>
     <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
