--- a/MEILI_Travel_Diary/public/views/map.html
+++ b/MEILI_Travel_Diary/public/views/map.html
@@ -57,7 +57,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <a href="#/" ng-click="api()">Call api</a>
 </p>-->
 
-<div class="row">
+<div class="row content">
     <div class="col-md-6 thisone" style="height: 90vh;">
 
         <div id="map" style="width: 100%; height: 100%">
