--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -56,6 +56,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
