Moving time formating into common util file

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -53,6 +53,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <!-- Custom scripts -->
     <script type="text/javascript" src="/javascripts/src/config.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/Util.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
