First working rewrite

--- a/MEILI_Travel_Diary/public/views/map.html
+++ b/MEILI_Travel_Diary/public/views/map.html
@@ -1,272 +1,11 @@
-<!--
-MEILI Travel Diary - web interface that allows to annotate GPS trajectories
-fused with accelerometer readings into travel diaries
-
-Copyright (C) 2014-2016 Adrian C. Prelipcean - http://adrianprelipcean.github.io/
-Copyright (C) 2016 Badger AB - https://github.com/Badger-MEILI
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as
-published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
--->
-
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-
-
-    <div class="panel-footer row visible-xs visible-sm navbar-fixed-top" style="top:50px"><!-- panel-footer -->
-        <div class="col-xs-6 text-left">
-            <div class="previous">
-                <button type="button" class="btn btn-default btn-lg" style="width:100%" ng-click="scrollTo('map')">
-                    <span class="glyphicon glyphicon-map-marker"></span>
-                    Map
-                </button>
-            </div>
-        </div>
-        <div class="col-xs-6 text-right">
-            <div class="next">
-                <button type="button" class="btn btn-default btn-lg" style="width:100%" ng-click="scrollTo('timeline')">
-                    <span class="glyphicon glyphicon-time"></span>
-                    Timeline
-                </button>
-            </div>
-        </div>
-    </div><!-- end panel-footer -->
-
-
-</head>
-<body>
-<!--A wild map appears.
-
-<br>
-
-<p>
-    <a href="#/">Api</a><br />
-    <a href="#/" ng-click="api()">Call api</a>
-</p>-->
 
 <div class="row content">
     <div class="col-md-6 thisone" style="height: 90vh;">
-
-        <div id="map" style="width: 100%; height: 100%">
-        </div>
+        <div id="map" style="width: 100%; height: 100%"></div>
     </div>
     <div class="col-md-6" id="left-panel">
         <div id="timeline">
             <ul class="timeline"></ul>
         </div>
-
-    <!--the end is inserted programmatically -->
-
     </div>
 </div>
-
-<div id="poiModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en" style="border-bottom: 2px solid #c25b4e">Insert a new destination place</h4> <!--<h4 lang="sv" style="border-bottom: 2px solid #c25b4e">Lägg till en ny målpunkt</h4>-->
-            <div class="input-group-addon" style="background: none; border:none">
-                <p lang="en" style="display: inline-block;border-bottom: 0px">Name of place</p> <!--<p lang="sv" style="display: inline-block;border-bottom: 0px">Namn på plats/målpunkt</p>-->
-                <input type="text" class="form-control" placeholder="Name" aria-describedby="basic-addon1" id="poiName" style="display: inline-block; max-width: 130px ">
-            </div>
-            <!--<p style="display:inline-block; border-bottom: 0px; width:55%; margin-left:5px">Please select type of POI: </p>
-                <select id="selectBox" class="form-controlV2" style="display: inline-block; width:40%;">
-                    <option value="1">Travel to work</option>
-                    <option value="2">Travel to school</option>
-                    <option value="3">Business travel</option>
-                    <option value="4">Restaurant/Café</option>
-                    <option value="5">Leisure travel (e.g. go to cinema, theater)</option>
-                    <option value="6">Sport/hobby related travel</option>
-                    <option value="7">Food/grocery shopping</option>
-                    <option value="8">Non-food shopping</option>
-                    <option value="9">Personal business (e.g. medical visit, bank, cutting hair)</option>
-                    <option value="10">Visit relatives and friends</option>
-                    <option value="11">Pick-up or drop-off children/other persons</option>
-                    <option value="12">Return home</option>
-                    <option value="13">Other (incl. walk/travel without specific purpose)</option>
-                </select>-->
-            <br>
-
-                <button lang="en" type="button" class="btn btn-default center-block" style="width:48%; display:inline-block; margin-left:5px" onclick="POIMarker()">Draw</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" style="width:48%; display:inline-block; margin-left:5px" onclick="POIMarker()">Rita</button>-->
-            <button lang="en" type="button" class="btn btn-default center-block" data-dismiss="modal" onclick="cancelPOIMarker()" style="width:48%; display:inline-block;">Cancel</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" data-dismiss="modal" onclick="cancelPOIMarker()" style="width:48%; display:inline-block;">Avbryt</button>-->
-        </div>
-    </div>
-</div>
-
-
-<div id="transitionAlertModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Consequences of your changes</h4> <!--<h4 lang="sv">Dina ändringar påverkar dina tidigare lämnade uppgifter</h4>-->
-
-            <p id="transitionParagraphAlert" style="display: none"> Foo 1 </p>
-            <ul id="modalList" style="display: none">
-            </ul>
-
-            <p id="transitionParagraphInform"> Foo 2 </p>
-            <br>
-
-            <button lang="en" type="button" class="btn btn-default center-block" onclick="performChanges($('#transitionAlertModal').data())">Accept</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" onclick="performChanges($('#transitionAlertModal').data())">Acceptera</button>-->
-            <button lang="en" type="button" class="btn btn-default center-block" onclick="cancelAllChanges($('#transitionAlertModal').data())">Cancel</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" onclick="cancelAllChanges($('#transitionAlertModal').data())">Avbryt</button>-->
-
-        </div>
-    </div>
-</div>
-
-<div id="transitionDeleteModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Are you sure there was no transfer between these two triplegs?</h4> <!--<h4 lang="sv">Är du säker på att det inte var något byte mellan dessa förflyttningar?</h4>-->
-
-            <button lang="en" type="button" class="btn btn-default center-block" onclick="mergeTripleg($('#transitionDeleteModal').data('triplegid'))">Yes</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" onclick="mergeTripleg($('#transitionDeleteModal').data('triplegid'))">Ja</button>-->
-            <button lang="en" type="button" class="btn btn-default center-block" onclick="cancelDeletion()">No</button> <!--<button lang="sv" type="button" class="btn btn-default center-block" onclick="cancelDeletion()">Nej</button>-->
-
-        </div>
-    </div>
-</div>
-
-<div id="selectedPointModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Location</h4> <!--<h4 lang="sv">Plats</h4>-->
-
-            <p id="timeOfPoint">Time: foo O'clock</p>
-
-            <div id="radioButtonHolder" style="margin-right: 10px;margin-left: 10px;">
-            <div class="radio" lang="en">
-                <label><input type="radio" name="radioOption" id="regularPoint">This was a regular point</label>
-            </div>
-                <!--<div class="radio" lang="sv">
-                    <label><input type="radio" name="radioOption" id="regularPointSv">Det här var en punkt inom förflyttningen</label>
-                </div>-->
-                <div class="radio" lang="en">
-                    <label><input type="radio" name="radioOption" id="startPoint">My trip started here</label>
-                </div>
-                <!--<div class="radio" lang="sv">
-                    <label><input type="radio" name="radioOption" id="startPointSv">Min förflyttning började här</label>
-                </div>-->
-            <div class="radio" lang="en">
-                <label><input type="radio" name="radioOption" id="transitionPoint">I changed my travel mode here</label>
-            </div>
-                <!--<div class="radio" lang="sv">
-                    <label><input type="radio" name="radioOption" id="transitionPointSv">Här bytte jag färdsätt</label>
-                </div>-->
-            <div class="radio" lang="en">
-                <label><input type="radio" name="radioOption" id="stopPoint">My trip ended here</label>
-            </div>
-                <!--<div class="radio" lang="sv">
-                    <label><input type="radio" name="radioOption" id="stopPointSv">Min förflyttning slutade här</label>
-                </div>-->
-            <div class="radio" lang="en">
-                <label><input type="radio" name="radioOption" id="deletePoint">Delete Point <span class="glyphicon glyphicon-trash"></span></label>
-            </div>
-                <!--<div class="radio" lang="sv">
-                    <label><input type="radio" name="radioOption" id="deletePointSv">Ta bort punkt <span class="glyphicon glyphicon-trash"></span></label>
-                </div>-->
-            </div>
-
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesPointModal()">Accept modifications</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesPointModal()">Acceptera ändringar</button>-->
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display:inline-block;" onclick="cancelPointModal()">Cancel</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display:inline-block;" onclick="cancelPointModal()">Avbryt</button>-->
-
-        </div>
-    </div>
-</div>
-
-<div id="selectedTransitionPeriodModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en" style="text-align:center">Transfer period</h4> <!--<h4 lang="sv" style="text-align:center">Bytesperiod</h4>-->
-
-            <p id="timeOfPeriod" style="text-align: center;border-bottom: 2px solid #c25b4e;padding-bottom: 3px;">Time: foo O'clock</p>
-
-            <div id="radioButtonPeriod" style="margin-right: 10px;margin-left: 10px;">
-                <div class="radio">
-                    <label lang="en"><input type="radio" name="radioOption" id="isTransition">This was a transfer period.</label>
-                    <!--<label lang="sv"><input type="radio" name="radioOption" id="isTransitionSv">Jag bytte färdsätt här</label>-->
-                </div>
-                <div class="radio">
-                    <label lang="en"><input type="radio" name="radioOption" id="notTransition">I did not change my travel mode here.</label>
-                    <!--<label lang="sv"><input type="radio" name="radioOption" id="notTransitionSv">Jag bytte inte färdsätt här.</label>-->
-                </div>
-            </div>
-
-            <div>
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesPeriodModal()">Accept modifications</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesPeriodModal()">Acceptera ändringar</button>-->
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display: inline-block" onclick="cancelPeriodModal()">Cancel</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display: inline-block" onclick="cancelPeriodModal()">Avbryt</button>-->
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-<div id="selectedStopPeriodModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Stop period</h4> <!--<h4 lang="sv">Vistelsetid vid målpunkt</h4>-->
-
-            <p id="timeOfStopPeriod">Time: foo O'clock</p>
-
-            <div id="radioButtonStopPeriod" style="margin-right: 10px;margin-left: 10px;">
-                <div class="radio">
-                    <label lang="en"><input type="radio" name="radioOption" id="isStop">This was a stop period.</label>
-                    <!--<label lang="sv"><input type="radio" name="radioOption" id="isStopSv">Jag stannade här.</label>-->
-                </div>
-                <div class="radio">
-                    <label lang="en"><input type="radio" name="radioOption" id="notStop">I did not stop here.</label>
-                    <!--<label lang="sv"><input type="radio" name="radioOption" id="notStopSv">Jag stannade inte här.</label>-->
-                </div>
-            </div>
-
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesStopPeriodModal()">Accept modifications</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display:inline-block; margin-left:5px" onclick="makeChangesStopPeriodModal()">Acceptera ändringar</button>-->
-            <button lang="en" type="button" class="btn btn-default" style="width:48%; display:inline-block;" onclick="cancelStopPeriodModal()">Cancel</button> <!--<button lang="sv" type="button" class="btn btn-default" style="width:48%; display:inline-block;" onclick="cancelStopPeriodModal()">Avbryt</button>-->
-
-        </div>
-    </div>
-</div>
-
-<div id="deleteTripModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Delete trip?</h4> <!--<h4 lang="sv">Ta bort förflyttning?</h4>-->
-            <p lang="en">Are you sure you want to delete this trip?</p> <!--<p lang="sv">Är du säker på att du vill ta bort denna förflyttning?</p>-->
-
-            <button lang="en" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-left:5px; margin-bottom: 5px;" onclick="deleteTrip()">Yes</button> <!--<button lang="sv" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-left:5px; margin-bottom: 5px;" onclick="deleteTrip()">Ja</button>-->
-            <button lang="en" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-bottom: 5px;">No</button> <!--<button lang="sv" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-bottom: 5px;">Nej</button>-->
-
-        </div>
-    </div>
-</div>
-
-<div id="mergeTripModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <h4 lang="en">Merge trip?</h4> <!--<h4 lang="sv">Sammanfoga förflyttningar?</h4>-->
-            <p lang="en">Are you sure you want to merge this trip with the next one?</p> <!--<p lang="sv">är du säker på att du vill sammanfoga denna förflyttning med nästa??</p>-->
-
-            <button lang="en" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-left:5px; margin-bottom: 5px;" onclick="mergeTrips()">Yes</button> <!--<button lang="sv" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-left:5px; margin-bottom: 5px;" onclick="mergeTrips()">Ja</button>-->
-            <button lang="en" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-bottom: 5px;">No</button> <!--<button lang="sv" type="button" class="btn btn-default" data-dismiss="modal" style="width:48%; display:inline-block; margin-bottom: 5px;">Nej</button>-->
-
-        </div>
-    </div>
-</div>
-
-<!--
-<div id="mytimeline"></div>
--->
-
-</body>
-
-</html>
