--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -28,9 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <!-- External libraries -->
     <script type="text/javascript" src="/javascripts/lib/jquery.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/angular.min.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/angular-resource.min.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/angular-route.min.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/page.js"></script>
 
     <script type="text/javascript" src="/javascripts/lib/intro.js"></script>
     <link   type="text/css"       href="/javascripts/lib/introjs.css" rel="stylesheet"  />
@@ -60,6 +58,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
+    <script type="text/javascript" src="/javascripts/src/meili/ui/Login.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/Tripleg.js"></script>
     <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
@@ -84,11 +83,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script>
 
         function activateMe(id) {
-            //forceLoad();
-           // $('.nav li').removeClass('active');
+           $('.nav li').removeClass('active');
            $('#'+id).addClass('active');
-//            $('#'+id+'sv').addClass('active');
-            console.log(id);
         }
     </script>
 
@@ -104,8 +100,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">MEILI</a>
-            <p class="navbar-text navbar-right visible-xs">{{actionMessage}} <a lang="en" href="#/map">Trips left<span class="badge">42</span></a>
+            <a class="navbar-brand" href="/">MEILI</a>
+            <p class="navbar-text navbar-right visible-xs">{{actionMessage}} <a lang="en" href="/map">Trips left<span class="badge">42</span></a>
                 <!--<a lang="sv" href="#/map">Förflyttningar kvar<span class="badge">42</span></a>-->
             </p>
 
@@ -114,23 +110,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li lang="en" onclick="activateMe(id)" class="active" id="firstOption"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
-                    <!--<li lang="sv" onclick="activateMe(id)" class="active" id="firstOptionsv"><a href="#/">Hem <span class="sr-only">(current)</span></a></li>-->
-                <li lang="en" onclick="activateMe(id)" id="secondOption"><a href="#Statistics">Statistics</a></li>
-                    <!--<li lang="sv" onclick="activateMe(id)" id="secondOptionsv"><a href="#Statistics">Statistik</a></li>-->
-                <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="#FAQ">FAQ</a></li>
-                    <!--<li lang="sv" onclick="activateMe(id)" id="thirdOptionsv"><a href="#FAQ">Frågor och svar</a></li>-->
-                <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="#Contact">Contact</a></li>
-                    <!--<li lang="sv" onclick="activateMe(id)" id="fourthOptionsv"><a href="#Contact">Kontakt</a></li>-->
-                <li lang="en" onclick="activateMe(id)" id="fifthOption"><a href="#About">About</a></li>
-                    <!--<li lang="sv" onclick="activateMe(id)" id="fifthOptionsv"><a href="#About">Om</a></li>-->
+                <li lang="en" onclick="activateMe(id)" class="active" id="firstOption"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                <li lang="en" onclick="activateMe(id)" id="secondOption"><a href="/Statistics">Statistics</a></li>
+                <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="/faq">FAQ</a></li>
+                <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/Contact">Contact</a></li>
 
+<!--
                 <li id="language-selector">
                     <select id="language-select" class="form-control" ng-change="translate()" ng-model="selectedLanguage" onchange="select_language(this.options[this.selectedIndex].value)">
-                        <!--<option value="sv" selected>Svenska</option>-->
+                        <option value="sv" selected>Svenska</option>
                         <option value="en" ng-selected="selected">English</option>
                     </select>
-                </li>
+                </li>-->
             </ul>
 
             <ul class="nav navbar-nav" style="width:20%; visibility: hidden;">
@@ -139,8 +130,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <p class="navbar-text navbar-right hidden-xs navtext-right" style="visibility: hidden;" id="badge_holder">{{actionMessage}}
-                    <a href="#/map">Trips left<span class="badge" id="tripsLeft">42</span></a></p>
+                <p class="navbar-text navbar-right hidden-xs navtext-right" style="visibility: hidden;" id="badge_holder">
+                    <a href="#/map">Trips left <span class="badge" id="tripsLeft">42</span></a>
+                </p>
             </ul>
             <script type="text/javascript">
                // forceLoad();
@@ -159,6 +151,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 </h4>-->
 
 <ng-view></ng-view>
+<div id="content"></div>
 
 </body>
 </html>
