--- a/MEILI_Travel_Diary/public/views/contact.html
+++ b/MEILI_Travel_Diary/public/views/contact.html
@@ -144,4 +144,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         }
     }
 
+
+    $('[lang="sv"]').hide();
+
 </script>
