--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -21,137 +21,120 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <!DOCTYPE html>
 <html ng-app="app">
-<head lang="en">
-    <meta charset="UTF-8">
+    <head lang="en">
+        <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- External libraries -->
-    <script type="text/javascript" src="/javascripts/lib/jquery.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/page.js"></script>
+        <!-- External libraries -->
+        <script type="text/javascript" src="/javascripts/lib/jquery.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/page.js"></script>
 
-    <script type="text/javascript" src="/javascripts/lib/intro.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/introjs.css" rel="stylesheet"  />
+        <script type="text/javascript" src="/javascripts/lib/intro.js"></script>
+        <link   type="text/css"       href="/javascripts/lib/introjs.css" rel="stylesheet"  />
 
-    <script type="text/javascript" src="/javascripts/lib/d3.min.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/d3.min.js"></script>
 
-    <script type="text/javascript" src="/javascripts/lib/vis.js"></script>
-    <link   type="text/css"        href="/stylesheets/lib/vis.css" rel="stylesheet"  />
+        <script type="text/javascript" src="/javascripts/lib/vis.js"></script>
+        <link   type="text/css"        href="/stylesheets/lib/vis.css" rel="stylesheet"  />
 
-    <script type="text/javascript" src="/javascripts/lib/bootstrap_3.3.1/js/bootstrap.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/bootstrap_3.3.1/css/bootstrap.css" rel="stylesheet" />
-    <script type="text/javascript" src="/javascripts/lib/bootstrap-timepicker_0.5.2/js/bootstrap-timepicker.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/bootstrap-timepicker_0.5.2/css/bootstrap-timepicker.css" rel="stylesheet"  />
+        <script type="text/javascript" src="/javascripts/lib/bootstrap_3.3.1/js/bootstrap.js"></script>
+        <link   type="text/css"       href="/javascripts/lib/bootstrap_3.3.1/css/bootstrap.css" rel="stylesheet" />
+        <script type="text/javascript" src="/javascripts/lib/bootstrap-timepicker_0.5.2/js/bootstrap-timepicker.js"></script>
+        <link   type="text/css"       href="/javascripts/lib/bootstrap-timepicker_0.5.2/css/bootstrap-timepicker.css" rel="stylesheet"  />
 
-    <script type="text/javascript" src="/javascripts/lib/leaflet_1.0.0/leaflet.js"></script>
-    <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
+        <script type="text/javascript" src="/javascripts/lib/leaflet_1.0.0/leaflet.js"></script>
+        <link   type="text/css"       href="/javascripts/lib/leaflet_1.0.0/leaflet.css" rel="stylesheet" />
 
-    <script type="text/javascript" src="/javascripts/lib/emitter_1.2.1/index.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/moment_2.15.1.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/emitter_1.2.1/index.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/moment_2.15.1.js"></script>
 
-    <!-- Custom scripts -->
-    <script type="text/javascript" src="/javascripts/src/config.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/Util.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/ui/Login.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/model/Tripleg.js"></script>
-    <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
+        <!-- Custom scripts -->
+        <script type="text/javascript" src="/javascripts/src/config.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/Util.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/Login.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/model/Tripleg.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/model/Trip.js"></script>
 
-    <script type="text/javascript" src="/javascripts/src/translationOp.js"></script>
-    <!--<script type="text/javascript" src="/javascripts/src/UserElements/generateBadge.js"></script>
-    <script type="text/javascript" src="/javascripts/src/TriplegElements/TriplegPagination.js"></script>
-    <script type="text/javascript" src="/javascripts/src/TripElements/TripPagination.js"></script>
-    
-    <script type="text/javascript" src="/javascripts/src/graphVis.js"></script>
-    <script type="text/javascript" src="/javascripts/src/TriplegOperations.js"></script>
-    <script type="text/javascript" src="/javascripts/src/databaseAbstractionCalls.js"></script>
-    <script type="text/javascript" src="/javascripts/src/leafletembed.js"></script>-->
+        <script type="text/javascript" src="/javascripts/src/translationOp.js"></script>
 
-    <script type="text/javascript" src="/javascripts/src/app.js"></script>
+        <script type="text/javascript" src="/javascripts/src/app.js"></script>
 
-    <link href="/stylesheets/custom_elem.css" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/custom_elem.css" rel="stylesheet" type="text/css" />
 
 
-    <title>MEILI</title>
+        <title>MEILI</title>
 
-    <script>
+        <script>
+            // Todo move into nav ui
+            function activateMe(id) {
+               $('.nav li').removeClass('active');
+               $('#'+id).addClass('active');
+            }
+        </script>
 
-        function activateMe(id) {
-           $('.nav li').removeClass('active');
-           $('#'+id).addClass('active');
-        }
-    </script>
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-static-top navbar-inverse" id="navbar-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">MEILI</a>
+                    <p class="navbar-text navbar-right visible-xs">
+                        <a lang="en" href="/map">Trips left<span class="badge">0</span></a>
+                    </p>
 
-</head>
+                </div>
 
-<nav class="navbar navbar-default navbar-static-top navbar-inverse" id="navbar-top">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">MEILI</a>
-            <p class="navbar-text navbar-right visible-xs">{{actionMessage}} <a lang="en" href="/map">Trips left<span class="badge">42</span></a>
-                <!--<a lang="sv" href="#/map">Förflyttningar kvar<span class="badge">42</span></a>-->
-            </p>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li lang="en" onclick="activateMe(id)" class="active" id="firstOption"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <!--<li lang="en" onclick="activateMe(id)" id="secondOption"><a href="/statistics">Statistics</a></li>-->
+                        <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="/faq">FAQ</a></li>
+                        <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/contact">Contact</a></li>
 
-        </div>
+        <!--
+                        <li id="language-selector">
+                            <select id="language-select" class="form-control" ng-change="translate()" ng-model="selectedLanguage" onchange="select_language(this.options[this.selectedIndex].value)">
+                                <option value="sv" selected>Svenska</option>
+                                <option value="en" ng-selected="selected">English</option>
+                            </select>
+                        </li>-->
+                    </ul>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li lang="en" onclick="activateMe(id)" class="active" id="firstOption"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-                <li lang="en" onclick="activateMe(id)" id="secondOption"><a href="/Statistics">Statistics</a></li>
-                <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="/faq">FAQ</a></li>
-                <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/Contact">Contact</a></li>
+                    <ul class="nav navbar-nav" style="width:20%; visibility: hidden;">
+                        <p lang="en" id="assistant" class="navbar-text navbar-right hidden-xs navtext-right" style="color:#F88A8A; display: none">Assistant <span class="glyphicon glyphicon-info-sign"></span></p>
+                    </ul>
 
-<!--
-                <li id="language-selector">
-                    <select id="language-select" class="form-control" ng-change="translate()" ng-model="selectedLanguage" onchange="select_language(this.options[this.selectedIndex].value)">
-                        <option value="sv" selected>Svenska</option>
-                        <option value="en" ng-selected="selected">English</option>
-                    </select>
-                </li>-->
-            </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <p class="navbar-text navbar-right hidden-xs navtext-right" style="visibility: hidden;" id="badge_holder">
+                            <a href="#/map">Trips left <span class="badge" id="tripsLeft">42</span></a>
+                        </p>
+                    </ul>
 
-            <ul class="nav navbar-nav" style="width:20%; visibility: hidden;">
-                <!--<p lang="sv" id="assistantSv" class="navbar-text navbar-right hidden-xs navtext-right" style="color:#F88A8A; display: none">Hjälp <span class="glyphicon glyphicon-info-sign"></span></p>-->
-                <p lang="en" id="assistant" class="navbar-text navbar-right hidden-xs navtext-right" style="color:#F88A8A; display: none">Assistant <span class="glyphicon glyphicon-info-sign"></span></p>
-            </ul>
+                </div><!-- /.navbar-collapse -->
 
-            <ul class="nav navbar-nav navbar-right">
-                <p class="navbar-text navbar-right hidden-xs navtext-right" style="visibility: hidden;" id="badge_holder">
-                    <a href="#/map">Trips left <span class="badge" id="tripsLeft">42</span></a>
-                </p>
-            </ul>
-            <script type="text/javascript">
-               // forceLoad();
-            </script>
-        </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
 
-    </div><!-- /.container-fluid -->
-</nav>
 
-<body>
 
-<!--
-{{message}}
 
-<h4>Selected language:<strong>{{selectedLanguage}}</strong>
-</h4>-->
+        <div id="content"></div>
 
-<ng-view></ng-view>
-<div id="content"></div>
-
-</body>
+    </body>
 </html>
